--- a/CSS/style.css
+++ b/CSS/style.css
@@ -131,10 +131,49 @@ header nav ul li a {
 	font-family: 'Kulim Park', sans-serif;
 	font-size: 16px;
 	color: #111;
+	text-transform: uppercase;
+
 }
 
 header .header-cases {
 	display: none;
+	}
+
+
+@media only screen and (min-width: 1000px) {
+	header .header-brand {
+	margin: 31px 0;
+	text-align: left;
+	line-height: 38px;
+	padding: 0 20px 0 40px;
+	border-right: 3px solid #111;
+	float: left;
+
+	}
+
+	header nav ul {
+	margin: 20px 0 0 20px;
+	float: left;
+	}
+
+	header nav ul li a {
+		line-height: 60px;
+	}
+
+	header .header-cases {
+	display: block;
+	font-family: 'Kulim Park', sans-serif;
+	font-size: 16px;
+	color: #111;
+	text-transform: uppercase;
+	line-height: 30px;
+	border: 1px solid #111;
+	float: right;
+	margin-right: 40px;
+	margin-top: 35px;
+	padding: 0 20px;
+	}
+
 }
 
 /*INDEX*/
@@ -152,7 +191,7 @@ header .header-cases {
 
 .vertical-center {
 	display: table-cell;
-	vertical-align: center;
+	vertical-align: middle;
 }
 
 .index-banner h2 {
@@ -191,6 +230,19 @@ header .header-cases {
 	color: #111;
 	text-align: center;
 	text-transform: uppercase;
+
+}
+
+@media only screen and (min-width: 1000px) {
+	.index-banner {
+	height: 450px;	
+	}
+
+	.index-banner h1 {
+		display: block;
+		width: 560px;
+		margin: 0 auto;	
+	}
 
 }
 
