--- a/main.css
+++ b/main.css
@@ -35,6 +35,7 @@ a {
 p {
 	font-size: 1.8rem;
 	font-weight: 300;
+	text-align: center;
 }
 
 img {
@@ -269,13 +270,11 @@ li {
 	font-size: 5rem;
 	transition: color 650ms;
 }
-
-.fa-twitter:hover {
-	color: #38a1f3;
-}
-
 .fa-youtube:hover {
 	color: #FF1616;
+}
+.fa-twitter:hover {
+	color: #38a1f3;
 }
 .fa-instagram:hover {
 	color: #833AB4;
@@ -576,6 +575,10 @@ input[type="submit"]:hover {
 		height: 7rem;
 	}
 
+	.fa-youtube:before {
+		padding-left: 2rem;
+	}
+
 	.icon-container i {
 		font-size: 4rem;
 	}
@@ -610,7 +613,7 @@ input[type="submit"]:hover {
 
 	.nav-list {
 		flex-direction: column;
-		width: 87%;
+		width: 95%;
 		align-items: center;
 	}
 
