--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@ p {
 	font-weight: 300;
 	text-align: center;
 	display: block;
+	padding: 1rem;
 }
 
 img {
@@ -90,17 +91,19 @@ img {
 }
 
 .section-heading h1::before {
-	width: 10rem;
+	/*width: 10rem;*/
+	width: 100%;
 	height: 3px;
-	border-radius: .8rem;
+	border-radius: 2rem;
+	background: linear-gradient(0.25turn, #E0FEFE, #FEBCC8, #E0FEFE);
 }
-
+/*
 .section-heading h1::after {
 	width: 1.5rem;
 	height: 1.5rem;
 	border-radius: 100%;
 	bottom: -1rem;
-}
+}*/
 
 .section-heading h6 {
 	font-size: 1.6rem;
@@ -145,8 +148,6 @@ li {
 }
 
 .nav-link {
-	/*font-family: 'Raleway', sans-serif;*/
-	/*font-family: 'Kalam', cursive;*/
 	font-size: 5rem;
 	padding: 1rem;
 }
@@ -165,10 +166,10 @@ li {
 
 .menu-toggler {
 	position: fixed;
-	top: 7rem;
-	right: 10rem;
-	width: 5rem;
-	height: 5rem;
+	top: 2rem;
+	right: 5rem;
+	width: 10rem;
+	height: 7rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -178,45 +179,11 @@ li {
 	background-color: ##B1B1B1;
 }
 
-.menu-toggler span {
-    font-size:14px;
-    font-weight: 400;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    bottom: 0;
-    left: -47px;
-    line-height: 0px;
-    overflow: hidden;
-    padding: 0;
-    position: relative;
-    white-space: nowrap;
-    width: 0;
-    
-    /* CSS3 Transition: */
-	-webkit-transition: 0.50s;
-	/* Future proofing (these do not work yet): */
-	-moz-transition: 0.50s;
-	transition: 0.50s;  
-}
-
-.menu-toggler:hover span { 
-	width:auto; 
-	padding:0 30px;
-	overflow:visible; 
-}
-
-.menu-toggler.open:hover span {
-	overflow: hidden;
-}
 
 .menu-toggler:hover {
 	text-decoration:none;
 }
 
-.menu-toggler span {
-	background-color: ##B7B7B7; 
-	color:##FFFFFF;
-}
 
 .menu-toggler.open {
 	transform: rotate(-45deg);
@@ -266,7 +233,6 @@ li {
 
 .landing-text h1 {
 	font-size: 9rem;
-	/*font-family: 'Raleway', sans-serif;*/
 	font-family: 'Julius Sans One', sans-serif;
 	background: linear-gradient(to top, #E0FEFE, #FEBCC8);
 	background: -webkit-linear-gradient(to top, #E0FEFE, #FEBCC8);
@@ -555,7 +521,6 @@ input[type="submit"]:hover {
 
 .text-email {
 	font-size: 3rem;
-	/*font-family: 'Raleway', sans-serif;*/
 	font-family: 'Julius Sans One', sans-serif;
 	background: linear-gradient(to top, #E0FEFE, #FEBCC8);
 	background: -webkit-linear-gradient(to top, #E0FEFE, #FEBCC8);
@@ -632,10 +597,6 @@ input[type="submit"]:hover {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-	}
-
-	.menu-toggler span {
-		overflow: visible;
 	}
 
 	.menu-toggler.open {
@@ -717,11 +678,6 @@ input[type="submit"]:hover {
 	.menu-toggler {
 		top: 2rem;
 		right: 2rem;
-	}
-
-
-	.menu-toggler span {
-		overflow: visible;
 	}
 
 	.menu-toggler.open {
