--- a/main.css
+++ b/main.css
@@ -57,6 +57,13 @@ img {
 	position: relative;
 }
 
+.container section {
+	position: sticky;
+	top: 0;
+	width: 100%;
+	height: 100vh;
+}
+
 .wrap {
 	position: relative;
 }
@@ -477,7 +484,7 @@ li {
 
 /*Start contact*/
 
-/*form {
+form {
 	width: 70%;
 	margin: 0 auto;
 }
@@ -492,8 +499,12 @@ textarea {
 	width: 100%;
 	padding: 1rem;
 	margin-bottom: 5px;
-	border: none;
-	outline: #FEBCC8;
+	border-radius: 2rem;
+	border-color: #FEBCC8;
+	/* outline: #FEBCC8; */
+	background: rgba(0, 0, 0, 0);
+	color: white;
+	decoration: none;
 }
 
 input[type="submit"] {
@@ -509,7 +520,7 @@ input[type="submit"] {
 input[type="submit"]:hover {
 	color: #eee;
 	background-color: #E18AAA;
-}*/
+}
 
 .box-email {
 	text-align: center;
