--- a/main.css
+++ b/main.css
@@ -145,7 +145,7 @@ header {
 	list-style: none;
 	width: 100%;
 	height: 100%;
-	display: flex;
+	display: inline-grid;
 	justify-content: center;
 	align-items: center;
 }
@@ -183,7 +183,6 @@ li {
 	cursor: pointer;
 	z-index: 1500;
 	transition: transform 650ms ease-out;
-	background-color: ##B1B1B1;
 }
 
 
@@ -320,6 +319,117 @@ li {
 
 
 /*End about*/
+
+/*Start Skills Languages*/
+.languages-skills {
+	width: 90%;
+	margin: 20px auto 0;
+	padding: 10px;
+	background: rgba(20, 20, 20, 0.2);
+	border-radius: 5%;
+}
+
+.languages-skills li{
+	position: relative;
+	list-style: none;
+	margin: 50px 0;
+	font-weight: 500;
+	font-size: 1.5rem;
+	text-transform: uppercase;
+}
+
+.languages-skills li:before {
+	content: "";
+	position: absolute;
+	top: calc(100% + 2px);
+	left: 0;
+	width: 100%;
+	height: 10px;
+	background-color: rgba(254, 188, 200, 0);
+	border-radius: 1000px;
+}
+
+.languages-skills li:after {
+	content: "";
+	position: absolute;
+	top: calc(100% + 10px);
+	left: 0;
+	width: 0;
+	height: 15px;
+	background-color: rgba(254, 188, 200, 1);
+	border-radius: 1000px;
+	animation-duration: 3s;
+	animation-timing-function: ease;
+	animation-fill-mode: forwards;
+}
+
+/*Start Animations Skills Languages*/
+li.html:after {
+	animation-name: html;
+}
+
+@keyframes html {
+	to {
+		width: calc((2*100%)/6);
+	}
+}
+
+li.css:after {
+	animation-name: css;
+}
+
+@keyframes css {
+	to {
+		width: calc((1*100%)/6);
+	}
+}
+
+li.php:after {
+	animation-name: php;
+}
+
+@keyframes php {
+	to {
+		width: calc((1*100%)/6);
+	}
+}
+
+li.js:after {
+	animation-name: js;
+}
+
+@keyframes js {
+	to {
+		width: calc((1*100%)/6);
+	}
+}
+
+li.csharp:after {
+	animation-name: csharp;
+}
+
+@keyframes csharp {
+	to {
+		width: calc((4*100%)/6);
+	}
+}
+
+li.python:after {
+	animation-name: python;
+}
+
+@keyframes python {
+	to {
+		width: calc((2*100%)/6);
+	}
+}
+
+/*End Animations Skills languages*/
+
+
+
+
+/*End Skills languages*/
 
 /*Start services*/
 .my-skills {
@@ -508,8 +618,8 @@ textarea {
 
 input[type="submit"] {
 	width: initial;
-	background-color: #E4A0B7;
-	color: #eee;
+	/* background-color: #E4A0B7;
+	color: #eee; */
 	padding: 1rem 2rem;
 	border-radius: .8rem;
 	cursor: pointer;
