--- a/main.css
+++ b/main.css
@@ -286,7 +286,10 @@ li {
 
 .profile-img {
 	flex: 1;
-	margin-right: -10rem;
+	/* margin-right: -10rem; */
+	margin: auto;
+	border-radius: 500px;
+  filter: drop-shadow(1px 1px 1px #222);
 	padding-left: 2rem;
 	height: 600px;
 	width: auto;
@@ -850,8 +853,9 @@ input[type="submit"]:hover {
 	}
 
 	.profile-img {
-		margin: 0 0 7rem 0;
+		margin: auto;
 		padding: 0;
+		border-radius: 50px;
 	}
 
 	.portfolio-item {
