--- a/main.css
+++ b/main.css
@@ -129,6 +129,34 @@ header {
 	height: 100vh;
 }
 
+.languages-font {
+	position: fixed;
+	width: 200px;
+  height: 68px;
+  z-index: 50;
+  align-content: center;
+  margin: 0px 20px;
+  text-align-last: center;
+
+}
+
+.language-font {
+	width: 100px;
+	float: left;
+	margin: 7px 0px 0px 0px;
+
+	background-image: linear-gradient(to right, rgba(43, 43, 43, 0.9), rgba(43, 43, 43, 0.9));
+	border-radius: 520px;
+
+}
+
+.language-font img {
+	width: auto;
+  align-content: center;
+  height: auto;
+  margin: 0px 10px;
+}
+
 .top-nav {
 	width: 100%;
 	height: 100vh;
@@ -286,13 +314,13 @@ li {
 
 .profile-img {
 	flex: 1;
-	/* margin-right: -10rem; */
+/* margin-right: -10rem; */
 	margin: auto;
 	border-radius: 500px;
-  filter: drop-shadow(1px 1px 1px #222);
+	filter: drop-shadow(1px 1px 1px #222);
 	padding-left: 2rem;
-	height: 600px;
-	width: auto;
+	height: 100%;
+	width: 100%;
 }
 
 .about-details {
@@ -503,7 +531,8 @@ li.java:after {
 /*Start portfolio*/
 
 iframe{
-	background-color: black;
+	width: 100%;
+  height: 100%;
 }
 
 .portfolio-item {
